@@ -101,6 +101,33 @@ static int numdualobj               =  0;
 #define DEGEN_LEVEL                  MSK_SIM_DEGEN_FREE
 #define ALWAYS_SOLVE_PRIMAL          1
 
+#if MSK_VERSION_MAJOR >= 7
+/** gives problem and solution status for a Mosek Task
+ *
+ * With Mosek 7.0, the routine MSK_getsolutionstatus was replaced by
+ * MSK_getprosta and MSK_getsolsta.
+ */
+static
+MSKrescodee MSK_getsolutionstatus(
+   MSKtask_t             task,               /**< Mosek Task */
+   MSKsoltypee           whichsol,           /**< for which type of solution a status is requested */
+   MSKprostae*           prosta,             /**< buffer to store problem status, or NULL if not needed */
+   MSKsolstae*           solsta              /**< buffer to store solution status, or NULL if not needed */
+   )
+{
+   if( prosta != NULL )
+   {
+      MOSEK_CALL( MSK_getprosta(task, whichsol, prosta) );
+   }
+   if( solsta != NULL )
+   {
+      MOSEK_CALL( MSK_getsolsta(task, whichsol, solsta) );
+   }
+
+   return MSK_RES_OK;
+}
+#endif
+
 /**********************************************/
 
 struct SCIP_LPi
@@ -170,11 +197,10 @@ void MSKAPI printstr(
 #if DEBUG_CHECK_DATA > 0
 /** check data */
 static SCIP_RETCODE scip_checkdata(
-   SCIP_LPI*             lpi                 /**< pointer to an LP interface structure */
+   SCIP_LPI*             lpi,                /**< pointer to an LP interface structure */
    const char*           functionname        /**< function name */
    )
 {
-   MSKrescodee r = MSK_RES_OK;
    int i;
    int numcon;
    int numvar;
@@ -278,6 +304,8 @@ static SCIP_RETCODE scip_checkdata(
    BMSfreeMemoryArray(&tskx);
    BMSfreeMemoryArray(&tblx);
    BMSfreeMemoryArray(&tbux);
+
+   return SCIP_OKAY;
 }
 #endif
 
@@ -618,7 +646,11 @@ SCIP_RETCODE SCIPlpiCreate(
 
    if (!MosekEnv)
    {
+#if MSK_VERSION_MAJOR < 7
       MOSEK_CALL( MSK_makeenv(&MosekEnv, NULL, NULL, NULL, NULL) );
+#else
+      MOSEK_CALL( MSK_makeenv(&MosekEnv, NULL) );
+#endif
       MOSEK_CALL( MSK_linkfunctoenvstream(MosekEnv, MSK_STREAM_LOG, NULL, printstr) );
       MOSEK_CALL( MSK_initenv(MosekEnv) );
    }
@@ -793,8 +825,12 @@ SCIP_RETCODE SCIPlpiAddCols(
    const SCIP_Real*      val                 /**< values of constraint matrix entries, or NULL if nnonz == 0 */
    )
 {  /*lint --e{715}*/
+#if MSK_VERSION_MAJOR < 7
    const int* aptrb;
    int* aptre;
+#else
+   int i;
+#endif
    MSKboundkeye* bkx;
    double* blx;
    double* bux;
@@ -820,6 +856,7 @@ SCIP_RETCODE SCIPlpiAddCols(
 
    MOSEK_CALL( MSK_getnumvar(lpi->task, &oldcols) );
    
+#if MSK_VERSION_MAJOR < 7
    SCIP_CALL( getEndptrs(ncols, beg, nnonz, &aptre) );
    
    if (nnonz == 0)
@@ -830,6 +867,25 @@ SCIP_RETCODE SCIPlpiAddCols(
    MOSEK_CALL( MSK_appendvars(lpi->task, ncols, obj, aptrb, aptre, ind, val, bkx, blx, bux) );
 
    BMSfreeMemoryArray(&aptre);
+
+#else
+   MOSEK_CALL( MSK_appendvars(lpi->task, ncols) );
+   MOSEK_CALL( MSK_putcslice(lpi->task, oldcols, oldcols+ncols, obj) );
+   MOSEK_CALL( MSK_putvarboundslice(lpi->task, oldcols, oldcols+ncols, bkx, blx, bux) );
+
+   if( nnonz > 0 )
+   {
+      /* @todo better use MSK_putacollist with a dummy index array */
+      for( i = 0; i < ncols-1; ++i )
+      {
+         MOSEK_CALL( MSK_putacol(lpi->task, oldcols+i, beg[i+1]-beg[i], ind+beg[i], val+beg[i]) );
+      }
+      assert(ncols >= 1);
+      MOSEK_CALL( MSK_putacol(lpi->task, oldcols+i, nnonz-beg[ncols-1], ind+beg[i], val+beg[i]) );
+   }
+
+#endif
+
    BMSfreeMemoryArray(&bux);
    BMSfreeMemoryArray(&blx);
    BMSfreeMemoryArray(&bkx);
@@ -863,7 +919,11 @@ SCIP_RETCODE SCIPlpiDelCols(
    SCIP_CALL( getIndicesRange(firstcol, lastcol, &sub) );
 
    /*printf("Deleting vars %d to %d\n",firstcol,lastcol);*/
+#if MSK_VERSION_MAJOR < 7
    MOSEK_CALL( MSK_remove(lpi->task,MSK_ACC_VAR, lastcol-firstcol+1, sub) );
+#else
+   MOSEK_CALL( MSK_removevars(lpi->task, lastcol-firstcol+1, sub) );
+#endif
 
    BMSfreeMemoryArray(&sub);
    
@@ -920,7 +980,11 @@ SCIP_RETCODE SCIPlpiDelColset(
    if (count > 0)
    {
       SCIPdebugMessage("Deleting %d vars %d,...\n", count, sub[0]);
+#if MSK_VERSION_MAJOR < 7
       MOSEK_CALL( MSK_remove(lpi->task, MSK_ACC_VAR, count, sub) );
+#else
+      MOSEK_CALL( MSK_removevars(lpi->task, count, sub) );
+#endif
       BMSfreeMemoryArray(&sub);
    }
 
@@ -944,8 +1008,12 @@ SCIP_RETCODE SCIPlpiAddRows(
    const SCIP_Real*      val                 /**< values of constraint matrix entries, or NULL if nnonz == 0 */
    )
 {  /*lint --e{715}*/
+#if MSK_VERSION_MAJOR < 7
    const int* aptrb;
    int* aptre;
+#else
+   MSKint32t i;
+#endif
    MSKboundkeye* bkc;
    double* blc;
    double* buc;
@@ -972,6 +1040,7 @@ SCIP_RETCODE SCIPlpiAddRows(
 
    MOSEK_CALL( MSK_getnumcon(lpi->task, &oldrows) );
 
+#if MSK_VERSION_MAJOR < 7
    SCIP_CALL( getEndptrs(nrows, beg, nnonz, &aptre) );
 
    if (nnonz == 0)
@@ -982,6 +1051,24 @@ SCIP_RETCODE SCIPlpiAddRows(
    MOSEK_CALL( MSK_appendcons(lpi->task, nrows, aptrb, aptre, ind, val, bkc, blc, buc) );
 
    BMSfreeMemoryArray(&aptre);
+
+#else
+   MOSEK_CALL( MSK_appendcons(lpi->task, nrows) );
+
+   MOSEK_CALL( MSK_putconboundslice(lpi->task, oldrows, oldrows+nrows, bkc, blc, buc) );
+
+   if( nnonz > 0 )
+   {
+      assert(nrows >= 1);
+      /* @todo better use MSK_putarowlist with a dummy index array */
+      for( i = 0; i < nrows-1; ++i )
+      {
+         MOSEK_CALL( MSK_putarow(lpi->task, oldrows+i, beg[i+1]-beg[i], ind+beg[i], val+beg[i]) );
+      }
+      MOSEK_CALL( MSK_putarow(lpi->task, oldrows+i, nnonz-beg[nrows-1], ind+beg[i], val+beg[i]) );
+   }
+#endif
+
    BMSfreeMemoryArray(&buc);
    BMSfreeMemoryArray(&blc);
    BMSfreeMemoryArray(&bkc);
@@ -1016,7 +1103,11 @@ SCIP_RETCODE SCIPlpiDelRows(
 
    SCIPdebugMessage("Deleting cons %d to %d\n",firstrow,lastrow);
 
+#if MSK_VERSION_MAJOR < 7
    MOSEK_CALL( MSK_remove(lpi->task, MSK_ACC_CON, lastrow-firstrow+1, sub) );
+#else
+   MOSEK_CALL( MSK_removecons(lpi->task, lastrow-firstrow+1, sub) );
+#endif
 
    BMSfreeMemoryArray(&sub);
 
@@ -1073,7 +1164,11 @@ SCIP_RETCODE SCIPlpiDelRowset(
    if (count > 0)
    {
       SCIPdebugMessage("Deleting %d cons %d,...\n",count,sub[0]);
+#if MSK_VERSION_MAJOR < 7
       MOSEK_CALL( MSK_remove(lpi->task, MSK_ACC_CON, count, sub) );
+#else
+      MOSEK_CALL( MSK_removecons(lpi->task, count, sub) );
+#endif
       BMSfreeMemoryArray(&sub);
    }
 
@@ -1292,16 +1387,26 @@ SCIP_RETCODE SCIPlpiScaleRow(
 
    assert(scaleval != 0);
 
+#if MSK_VERSION_MAJOR < 7
    MOSEK_CALL( MSK_getavecnumnz(lpi->task, MSK_ACC_CON, row, &nnonz) );
+#else
+   MOSEK_CALL( MSK_getarownumnz(lpi->task, row, &nnonz) );
+#endif
 
    if (nnonz != 0)
    {
       SCIP_ALLOC( BMSallocMemoryArray(&sub, nnonz) );
       SCIP_ALLOC( BMSallocMemoryArray(&val, nnonz) );
 
+#if MSK_VERSION_MAJOR < 7
       MOSEK_CALL( MSK_getavec(lpi->task, MSK_ACC_CON, row, &nnonz, sub, val) );
       scale_vec(nnonz, val, scaleval);
       MOSEK_CALL( MSK_putavec(lpi->task, MSK_ACC_CON, row, nnonz, sub, val) );
+#else
+      MOSEK_CALL( MSK_getarow(lpi->task, row, &nnonz, sub, val) );
+      scale_vec(nnonz, val, scaleval);
+      MOSEK_CALL( MSK_putarow(lpi->task, row, nnonz, sub, val) );
+#endif
 
       BMSfreeMemoryArray(&val);
       BMSfreeMemoryArray(&sub);
@@ -1344,16 +1449,26 @@ SCIP_RETCODE SCIPlpiScaleCol(
 #endif
 
    assert(scaleval != 0);
+#if MSK_VERSION_MAJOR < 7
    MOSEK_CALL( MSK_getavecnumnz(lpi->task, MSK_ACC_VAR, col, &nnonz) );
+#else
+   MOSEK_CALL( MSK_getacolnumnz(lpi->task, col, &nnonz) );
+#endif
 
    if (nnonz != 0)
    {
       SCIP_ALLOC( BMSallocMemoryArray(&sub, nnonz) );
       SCIP_ALLOC( BMSallocMemoryArray(&val, nnonz) );
 
+#if MSK_VERSION_MAJOR < 7
       MOSEK_CALL( MSK_getavec(lpi->task, MSK_ACC_VAR, col, &nnonz, sub, val) );
       scale_vec(nnonz, val, scaleval);
       MOSEK_CALL( MSK_putavec(lpi->task, MSK_ACC_VAR, col, nnonz, sub, val) );
+#else
+      MOSEK_CALL( MSK_getacol(lpi->task, col, &nnonz, sub, val) );
+      scale_vec(nnonz, val, scaleval);
+      MOSEK_CALL( MSK_putacol(lpi->task, col, nnonz, sub, val) );
+#endif
 
       BMSfreeMemoryArray(&val);
       BMSfreeMemoryArray(&sub);
@@ -1409,7 +1524,7 @@ SCIP_RETCODE SCIPlpiGetNCols(
    SCIPdebugMessage("Calling SCIPlpiGetNCols (%d)\n",lpi->lpid);
 
    MOSEK_CALL( MSK_getnumvar(lpi->task, ncols) );
-   
+
    return SCIP_OKAY;
 }
 
@@ -1863,9 +1978,9 @@ SCIP_RETCODE SolveWSimplex(
 
    lpi->itercount = itercount_primal + itercount_dual;
 
-   MOSEK_CALL(MSK_getprimalobj(lpi->task, MSK_SOL_BAS, &pobj));
-   MOSEK_CALL(MSK_getdualobj(lpi->task, MSK_SOL_BAS, &dobj));
-   MOSEK_CALL(MSK_getsolutionstatus ( lpi->task, MSK_SOL_BAS, &prosta, &solsta));
+   MOSEK_CALL( MSK_getprimalobj(lpi->task, MSK_SOL_BAS, &pobj) );
+   MOSEK_CALL( MSK_getdualobj(lpi->task, MSK_SOL_BAS, &dobj) );
+   MOSEK_CALL( MSK_getsolutionstatus(lpi->task, MSK_SOL_BAS, &prosta, &solsta) );
 
 #if DEBUG_PRINT_STAT
    SCIPdebugMessage("maxiter = %d, termcode = %d, prosta = %d, solsta = %d, objval = %g : %g, iter = %d+%d\n",
@@ -2070,8 +2185,8 @@ SCIP_RETCODE SCIPlpiSolvePrimal(
    if( optimizecount > WRITE_ABOVE )
    {
       char fname[40];
-      snprintf(fname,40,"primal_%d.mbt",optimizecount);
-      SCIPdebugMessage("\nWriting mbt %s\n",fname);
+      snprintf(fname,40,"primal_%d.lp",optimizecount);
+      SCIPdebugMessage("\nWriting lp %s\n",fname);
       /*MOSEK_CALL( MSK_putintparam(lpi->task,MSK_IPAR_WRITE_GENERIC_NAMES,MSK_ON) );*/
       MSK_writedata(lpi->task,fname);
    }
@@ -2084,7 +2199,7 @@ SCIP_RETCODE SCIPlpiSolvePrimal(
       MSKsolstae solsta;
 
       MOSEK_CALL( MSK_getsolutionstatus ( lpi->task, MSK_SOL_BAS, NULL, &solsta) );
-      
+
 
       if( solsta != MSK_SOL_STA_PRIM_FEAS )
       {
@@ -2123,8 +2238,8 @@ SCIP_RETCODE SCIPlpiSolveDual(
    if( optimizecount > WRITE_ABOVE )
    {
       char fname[40];
-      snprintf(fname,40,"dual_%d.mbt",optimizecount);
-      SCIPdebugMessage("\nWriting mbt %s\n",fname);
+      snprintf(fname,40,"dual_%d.lp",optimizecount);
+      SCIPdebugMessage("\nWriting lp %s\n",fname);
       MSK_writedata(lpi->task,fname);
    }
 #endif
@@ -2199,8 +2314,8 @@ SCIP_RETCODE SCIPlpiSolveBarrier(
    if( optimizecount > WRITE_ABOVE )
    {
       char fname[40];
-      snprintf(fname,40,"intpnt_%d.mbt",optimizecount);
-      SCIPdebugMessage("\nWriting mbt %s\n",fname);
+      snprintf(fname,40,"intpnt_%d.lp",optimizecount);
+      SCIPdebugMessage("\nWriting lp %s\n",fname);
       /*MOSEK_CALL( MSK_putintparam(lpi->task,MSK_IPAR_WRITE_GENERIC_NAMES,MSK_ON) );*/
       MSK_writedata(lpi->task,fname);
    }
@@ -2615,7 +2730,7 @@ SCIP_Bool SCIPlpiWasSolved(
 
    SCIPdebugMessage("Calling SCIPlpiWasSolved (%d)\n",lpi->lpid);
 
-   ABORT_FALSE( getSolutionStatus (lpi, &prosta, &solsta) );
+   SCIP_CALL_ABORT( getSolutionStatus (lpi, &prosta, &solsta) );
 
    return (solsta == MSK_SOL_STA_OPTIMAL);
 }
@@ -2696,7 +2811,7 @@ SCIP_Bool SCIPlpiExistsPrimalRay(
 
    SCIPdebugMessage("Calling SCIPlpiExistsPrimalRay (%d)\n",lpi->lpid);
 
-   ABORT_FALSE( getSolutionStatus (lpi, &prosta, &solsta));
+   SCIP_CALL_ABORT( getSolutionStatus (lpi, &prosta, &solsta));
 
    return (   solsta == MSK_SOL_STA_DUAL_INFEAS_CER
       || prosta == MSK_PRO_STA_DUAL_INFEAS
@@ -2718,7 +2833,7 @@ SCIP_Bool SCIPlpiHasPrimalRay(
  
    SCIPdebugMessage("Calling SCIPlpiHasPrimalRay (%d)\n",lpi->lpid);
    
-   ABORT_FALSE( getSolutionStatus (lpi, NULL, &solsta) );
+   SCIP_CALL_ABORT( getSolutionStatus (lpi, NULL, &solsta) );
 
    return (solsta == MSK_SOL_STA_DUAL_INFEAS_CER);
 }
@@ -2752,7 +2867,7 @@ SCIP_Bool SCIPlpiIsPrimalFeasible(
 
    SCIPdebugMessage("Calling SCIPlpiIsPrimalFeasible (%d)\n",lpi->lpid);
 
-   ABORT_FALSE( getSolutionStatus (lpi, &prosta, NULL) );
+   SCIP_CALL_ABORT( getSolutionStatus (lpi, &prosta, NULL) );
 
    return (prosta == MSK_PRO_STA_PRIM_FEAS || prosta == MSK_PRO_STA_PRIM_AND_DUAL_FEAS);
 }
@@ -2773,7 +2888,7 @@ SCIP_Bool SCIPlpiExistsDualRay(
 
    SCIPdebugMessage("Calling SCIPlpiExistsDualRay (%d)\n",lpi->lpid);
 
-   ABORT_FALSE( getSolutionStatus(lpi, &prosta, &solsta) );
+   SCIP_CALL_ABORT( getSolutionStatus(lpi, &prosta, &solsta) );
 
    return (   solsta == MSK_SOL_STA_PRIM_INFEAS_CER
       || prosta == MSK_PRO_STA_PRIM_INFEAS
@@ -2795,7 +2910,7 @@ SCIP_Bool SCIPlpiHasDualRay(
 
    SCIPdebugMessage("Calling SCIPlpiHasDualRay (%d)\n",lpi->lpid);
 
-   ABORT_FALSE( getSolutionStatus (lpi, NULL, &solsta) );
+   SCIP_CALL_ABORT( getSolutionStatus (lpi, NULL, &solsta) );
 
    return (solsta == MSK_SOL_STA_PRIM_INFEAS_CER);
 }
@@ -2829,7 +2944,7 @@ SCIP_Bool SCIPlpiIsDualFeasible(
 
    SCIPdebugMessage("Calling SCIPlpiIsDualFeasible (%d)\n",lpi->lpid);
 
-   ABORT_FALSE( getSolutionStatus(lpi, &prosta, NULL) );
+   SCIP_CALL_ABORT( getSolutionStatus(lpi, &prosta, NULL) );
 
    return (prosta == MSK_PRO_STA_DUAL_FEAS || prosta == MSK_PRO_STA_PRIM_AND_DUAL_FEAS);
 }
@@ -2848,7 +2963,7 @@ SCIP_Bool SCIPlpiIsOptimal(
 
    SCIPdebugMessage("Calling SCIPlpiIsOptimal (%d)\n",lpi->lpid);
 
-   ABORT_FALSE( getSolutionStatus(lpi, NULL, &solsta) );
+   SCIP_CALL_ABORT( getSolutionStatus(lpi, NULL, &solsta) );
 
    return (solsta == MSK_SOL_STA_OPTIMAL);
 }
@@ -3441,14 +3556,22 @@ SCIP_RETCODE SCIPlpiGetBInvACol(
    assert(lpi->task != NULL);
 
    MOSEK_CALL( MSK_getnumcon(lpi->task,&nrows) );
+#if MSK_VERSION_MAJOR < 7
    MOSEK_CALL( MSK_getavecnumnz(lpi->task,MSK_ACC_VAR,c,&numnz) );
+#else
+   MOSEK_CALL( MSK_getacolnumnz(lpi->task,c,&numnz) );
+#endif
    SCIP_ALLOC( BMSallocMemoryArray( &sub, nrows) );
    SCIP_ALLOC( BMSallocMemoryArray( &val, numnz+1) );
    
    for (i=0; i<nrows; i++)
       coef[i] = 0;
 
+#if MSK_VERSION_MAJOR < 7
    MOSEK_CALL( MSK_getavec(lpi->task, MSK_ACC_VAR, c, &numnz, sub, val) );
+#else
+   MOSEK_CALL( MSK_getacol(lpi->task, c, &numnz, sub, val) );
+#endif
 
    for (i=0; i<numnz; i++)
       coef[sub[i]] = val[i];
@@ -3552,7 +3675,11 @@ SCIP_RETCODE SCIPlpiGetBInvARow(
    {
       val[i] = 0;
 
+#if MSK_VERSION_MAJOR < 7
       MOSEK_CALL( MSK_getavec(lpi->task, MSK_ACC_VAR, i, &numnz, csub, cval) );
+#else
+      MOSEK_CALL( MSK_getacol(lpi->task, i, &numnz, csub, cval) );
+#endif
 
       for( k = 0; k < numnz; ++k )
          val[i] += binv[csub[k]] * cval[k];
@@ -3943,6 +4070,9 @@ static const char* paramname[] = {
    "SCIP_LPPAR_LPITLIM",                     /**< LP iteration limit */                                         
    "SCIP_LPPAR_LPTILIM",                     /**< LP time limit */                                              
    "SCIP_LPPAR_MARKOWITZ",                   /**< Markowitz tolerance */
+   "SCIP_LPPAR_ROWREPSWITCH",                /**< simplex algorithm shall use row representation of the basis
+                                               *  if number of rows divided by number of columns exceeds this value */
+   "SCIP_LPPAR_THREADS"                      /**< number of threads used to solve the LP */
 };
 
 /** method mapping parameter index to parameter name */
@@ -3966,6 +4096,8 @@ const char* paramty2str(
    assert(SCIP_LPPAR_LPITLIM == 11);         /**< LP iteration limit */                                         
    assert(SCIP_LPPAR_LPTILIM == 12);         /**< LP time limit */                                              
    assert(SCIP_LPPAR_MARKOWITZ == 13);       /**< Markowitz tolerance */
+   assert(SCIP_LPPAR_ROWREPSWITCH == 14);    /**< row representation switch */
+   assert(SCIP_LPPAR_THREADS == 15);         /**< number of threads used to solve the LP */
                                            
    return paramname[type]; 
 }
@@ -4004,7 +4136,7 @@ SCIP_RETCODE SCIPlpiGetIntpar(
       break;
    case SCIP_LPPAR_LPINFO:                    /* should LP solver output information to the screen? */
       MOSEK_CALL( MSK_getintparam(lpi->task, MSK_IPAR_LOG, ival) );
-      *ival = (*ival == MSK_ON); 
+      *ival = (*ival == MSK_ON);
       break;
    case SCIP_LPPAR_LPITLIM:                   /* LP iteration limit */
       MOSEK_CALL( MSK_getintparam(lpi->task, MSK_IPAR_SIM_MAX_ITERATIONS, ival) );
@@ -4299,7 +4431,7 @@ SCIP_RETCODE SCIPlpiReadLP(
    assert(lpi->task != NULL);
 
    MOSEK_CALL( MSK_getintparam(lpi->task, MSK_IPAR_READ_DATA_FORMAT, &olddataformat) );
-   MOSEK_CALL( MSK_putintparam(lpi->task, MSK_IPAR_READ_DATA_FORMAT, MSK_DATA_FORMAT_MBT) );
+   MOSEK_CALL( MSK_putintparam(lpi->task, MSK_IPAR_READ_DATA_FORMAT, MSK_DATA_FORMAT_LP) );
    MOSEK_CALL( MSK_readdata(lpi->task, fname) );
    MOSEK_CALL( MSK_putintparam(lpi->task, MSK_IPAR_READ_DATA_FORMAT, olddataformat) );
    
@@ -4321,7 +4453,7 @@ SCIP_RETCODE SCIPlpiWriteLP(
    assert(lpi->task != NULL);
 
    MOSEK_CALL( MSK_getintparam(lpi->task, MSK_IPAR_WRITE_DATA_FORMAT, &olddataformat) );
-   MOSEK_CALL( MSK_putintparam(lpi->task, MSK_IPAR_WRITE_DATA_FORMAT, MSK_DATA_FORMAT_MBT) );
+   MOSEK_CALL( MSK_putintparam(lpi->task, MSK_IPAR_WRITE_DATA_FORMAT, MSK_DATA_FORMAT_LP) );
    MOSEK_CALL( MSK_writedata(lpi->task, fname) );
    MOSEK_CALL( MSK_putintparam(lpi->task, MSK_IPAR_WRITE_DATA_FORMAT, olddataformat) );
    
