@@ -7,6 +7,7 @@ fixed bugs:
 
 features:
 - can now output the solutions in the solution pool in the interactive shell
+- updated Mosek interface to compile with Mosek 7, too
 
 
 SCIP version 3.0.1
